--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://conradr.github.io/<repo-name>",
+  "homepage": "https://conradr.github.io/portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
